# bioInformatics_practice

./: CMakeLists.txt  README.md  main.cpp
ba10/: ba10c.cpp
ba2/: ba2b.cpp  ba2f.cpp
ba3/: ba3c.cpp  ba3d.cpp  ba3h.cpp  ba3j.cpp  ba3k.cpp  ba3m.cpp
ba5/: ba5c.cpp  ba5e.cpp  ba5j.cpp  ba5m.cpp
ba6/: ba6a.cpp  ba6b.cpp  ba6c.cpp  ba6d.cpp
ba7/: ba7a.cpp  ba7c.cpp
ba9/: ba9d.cpp  ba9h.cpp
inputs/: test.in
training/: cons.cpp  dna.cpp  dna_to_rna.cpp  fib.cpp  gc.cpp  hamm.cpp  iprb.cpp  perm.cpp  subs.cpp
