cmake_minimum_required(VERSION 3.10)
project(bioinformatics_practise)

set(CMAKE_CXX_STANDARD 14)

add_executable(bioinf main.cpp)
add_executable(dna training/dna.cpp)
add_executable(dna_to_rna training/dna_to_rna.cpp)
add_executable(fib training/fib.cpp)
add_executable(gc training/gc.cpp)
add_executable(subs training/subs.cpp)
add_executable(hamm training/hamm.cpp)
add_executable(perm training/perm.cpp)
add_executable(cons training/cons.cpp)
add_executable(iprb training/iprb.cpp)
add_executable(ba7a ba7/ba7a.cpp)
add_executable(ba7c ba7/ba7c.cpp)
add_executable(ba3c ba3/ba3c.cpp)
add_executable(ba3d ba3/ba3d.cpp)
add_executable(ba3h ba3/ba3h.cpp)
add_executable(ba3k ba3/ba3k.cpp)
add_executable(ba3m ba3/ba3m.cpp)
add_executable(ba5c ba5/ba5c.cpp)
add_executable(ba5e ba5/ba5e.cpp)
add_executable(ba5j ba5/ba5j.cpp)
add_executable(ba5m ba5/ba5m.cpp)
add_executable(ba6a ba6/ba6a.cpp)
add_executable(ba6b ba6/ba6b.cpp)
add_executable(ba6c ba6/ba6c.cpp)
add_executable(ba6d ba6/ba6d.cpp)

